<resources>
    <string name="app_name">Resident</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="birth_date">Birth Date</string>
    <string name="action_save">SAVE</string>
    <string name="validation">Please fill up all the fields</string>
</resources>
