...
                app:layout_constraintWidth_percent="0.4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <EditText
                android:id="@+id/nameValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="@dimen/normal_text"
                android:text="@={residentViewModel.name}"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.6"
                app:layout_constraintLeft_toRightOf="@+id/name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/birthDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textStyle="bold"
                android:text="@string/birth_date"
                android:textSize="@dimen/normal_text"
...
